# zwill

./: .gitignore  AGENTS.md  LICENSE  PERFORMANCE.md  RANK_SPEC.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
docs/assets/: climate-policy-v2-plan.json  pew-w158-evidence-summary.json
examples/hello_world/: README.md  agent_list_study.sh  agent_material_twin.sh  answers.jsonl  questions.jsonl  respondents.jsonl  show_table.py  show_table.sh  twin_plan.json  twin_plan_lifecycle.sh  twin_plan_prior.jsonl  workflow.json
examples/hello_world/expected/: status_after_add.json  truth_marginals.json
examples/hello_world/raw/: questionnaire.md
examples/hiring_study/: README.md  answers.jsonl  answers_with_invalid.jsonl  questions.jsonl  respondents.jsonl
examples/hiring_study/expected/: status_after_import.json  truth_marginals.json
examples/hiring_study/raw/: panel_export.csv  questionnaire.md
examples/llm_survey_priors/: README.md  ingest_normalized.py  run_small_twin_study.sh  sample_digital_twin_practitioner_report.html  sample_digital_twin_practitioner_report.md  sample_digital_twin_practitioner_report.prompt.md  sample_digital_twin_practitioner_report.report_job.edsl.json  sample_digital_twin_practitioner_report_exercise_aware.html  sample_digital_twin_practitioner_report_new_flow.html  sample_digital_twin_practitioner_report_usecase_first.html  w158_ccpolicy_single_survey_practitioner_report.html
examples/pew_w154_diff1/: README.md  agent_study_example.sh  agent_study_report.py  context.md  ingest.sh  prepare_imports.py  twin_building_tutorial.md
examples/pew_w158_tutorial/: README.md  answers.jsonl  questions.jsonl  respondents.jsonl  run_summary.json  source.md
examples/twin_pipelines/: README.md  dialectical.json  dialectical_predict.md  dialectical_reason.md  persona_reframe.json  persona_reframe.md
guides/: company_digital_twin_evaluation.md
scripts/: create_question_embedding_heatmap.py  excel_true_heldout_answer_commonness.py  random_sample_5q_metrics.py  true_heldout_oneshot_diagnostics.py
tests/: test_cli_workflows.py  test_consolidated_report.py  test_guide_and_next.py  test_llm_survey_priors_ingest.py  test_numeric_scoring.py  test_open_ends.py  test_output_root.py  test_probability.py  test_probability_jobs.py  test_report_conditional_baseline.py  test_reporting.py  test_result_imports.py  test_scoring_math.py  test_survey_report.py  test_twin_baseline.py  test_twin_bootstrap.py  test_twin_leakage.py  test_twin_model_guard.py  test_twin_modules.py  test_twin_pipeline.py  test_twin_report_data.py  test_twin_scoring.py  test_twin_studies_ep.py  test_twin_validate.py
tests/fixtures/: twin_benchmark.json  twin_results.json
zwill/: __init__.py  agent_studies.py  cli.py  cli_parser.py  consolidated_report.py  costs.py  diagnostic_svg.py  edsl_integration.py  errors.py  executive_summary.py  generated_reports.py  guide_commands.py  jsonlio.py  numeric.py  numeric_commands.py  numeric_report.py  open_ends.py  open_ends_commands.py  practitioner_reports.py  probability.py  probability_commands.py  probability_jobs.py  probability_report.py  rank.py  report_bundle.py  report_common.py  reporting.py  result_commands.py  result_imports.py  survey_commands.py  survey_report.py  twin.py  twin_approaches.py  twin_baseline.py  twin_baseline_commands.py  twin_bootstrap.py  twin_diagnostics.py  twin_experiments.py  twin_jobs.py  twin_microdata.py  (+11 more)
zwill/assets/: report.css
zwill/guides/: agent-workflow.md  import-format.md  interpreting-results.md  prompt-pipelines.md  rank.md
zwill/skills/digital-twin-practitioner-report/: SKILL.md
zwill/skills/digital-twin-practitioner-report/agents/: openai.yaml
zwill/skills/digital-twin-study-runner/: SKILL.md
zwill/skills/digital-twin-study-runner/agents/: openai.yaml
