[project]
name = "zwill"
version = "0.1.0"
description = "Python CLI for building survey datasets."
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "rich>=13.0",
    "edsl",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

# edsl is developed alongside zwill in a sibling checkout. Resolve it from the
# local editable source rather than PyPI so `uv pip install -e .` uses the same
# EDSL you are working on. Adjust the path if your checkout lives elsewhere.
[tool.uv.sources]
edsl = { path = "../edsl", editable = true }

[project.scripts]
zwill = "zwill.cli:main"

[tool.setuptools.packages.find]
include = ["zwill*"]

[tool.setuptools.package-data]
zwill = [
    "skills/*/SKILL.md",
    "skills/*/agents/openai.yaml",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
